--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,14 +13,14 @@
 {% block content %}
   <div class="container">
     <div class="row top-buffer">
-      <div class="col-md-4 browser-sidebar-section">
+      <div class="col-md-6 browser-sidebar-section">
         <p class="browser-result"> Results: </p>
         <div class="browser-sidebar">
           <ul class="list-group">
           </ul>
         </div>
       </div>
-      <div class="col-md-8 video-sidebar-section">
+      <div class="col-md-6 video-sidebar-section">
         <div class="row">
           <div class="embed-responsive embed-responsive-16by9">
               <video
@@ -50,53 +50,6 @@
 {% endblock %}
 
 {% block custom_scripts %}
-  <script>
-    var navBar = document.getElementById('nav-bar');
-    createVideoList();
-
-    function createVideoList() {
-      let videoFiles = JSON.parse('{{ videoFiles|safe }}');
-      let videoList = document.getElementsByClassName('list-group')[0];
-      let browserResult = document.getElementsByClassName('browser-result')[0];
-
-      browserResult.innerHTML = 'Results: ' + videoFiles.length;
-
-      for (let i = 0, len = videoFiles.length; i < len; i++) {
-        let element = document.createElement('li');
-        element.className = 'list-group-item';
-        element.onclick = videoOnClick(videoFiles[i]);
-        element.appendChild(document.createTextNode(videoFiles[i].split('/').pop()));
-        videoList.appendChild(element);
-      }
-    }
-
-    function videoOnClick(filePath) {
-
-    }
-    // // var navBar = document.getElementById('nav-bar');
-
-    // navBar.addEventListener('mousemove', moveIn);
-    // navBar.addEventListener('mouseleave', moveOut);
-
-    // function moveIn(event) {
-      // let target = event.target;
-      // let x = event.clientX, y = event.clientY;
-      //
-      // let line = document.getElementById('mouse-line');
-      //
-      // if (!line) {
-      //   //Create line element at position of mouse cursor
-      //   line = document.createElementNS('http://www.w3.org/2000/svg', 'line');
-      //   line.setAttributeNS(null, 'id', 'mouse-line');
-      // }
-      // line.setAttributeNS(null, 'x1', x);
-      // line.setAttributeNS(null, 'x2', x);
-      // line.setAttributeNS(null, 'y1', )
-    // }
-
-    // function moveOut(event) {
-      // let target = event.target;
-      //Need to remove line element
-    // }
+<script type="text/javascript" src="{{ url_for('static', filename='index.js')}}">
   </script>
 {% endblock %}
