Made rectangle svg nav-bar to a canvas

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,14 +35,11 @@
                     supports HTML5 video
                   </a>
                 </p>
-                <!--<source src="{{ url_for('static', filename='videos/Videos-converted/v_YoYo_g25_c05.mp4') }}" type="video/mp4">-->
               </video>
             </div>
           </div>
           <div class="row">
-              <svg class="video-nav-bar-container top7">
-                <rect id="nav-bar" class="video-nav-bar" rx="5" ry="5"/>
-              </svg>
+              <canvas class="video-nav-bar top7"></canvas>
           </div>
       </div>
     </div>
