--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,7 @@
+:root {
+    --teal-color: #41cde2;
+}
+
 .top-buffer {
   margin-top: 5vh;
   width: inherit%;
@@ -9,10 +13,6 @@
   overflow-y: scroll;
 }
 
-.list-group-item:hover {
-    background-color: rgba(0, 0, 255, 0.3);
-}
-
 .video-nav-bar-container {
   width: 100%;
   height: 100%;
@@ -20,10 +20,11 @@
 
 .video-nav-bar {
   width: 100%;
-  height: 25%;
-  fill: blue;
+  height: 5vh;
+  background: var(--teal-color);
   opacity: 0.5;
 }
+
 .top5 { margin-top:5vh; }
 .top7 { margin-top:7vh; }
 .top10 { margin-top:10vh; }
