--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -20,7 +20,8 @@
 
 .video-nav-bar {
   width: 100%;
-  height: 5vh;
+  /*height: 5vh;*/
+  height: 100%;
   background: var(--teal-color);
   opacity: 0.5;
 }
