--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,12 +2,12 @@
 
 {% block css %}
   {{ super() }}
-  <!--<link href="//vjs.zencdn.net/5.11/video-js.min.css" rel="stylesheet">-->
+  <link href="//vjs.zencdn.net/5.11/video-js.min.css" rel="stylesheet">
 {% endblock %}
 
 {% block scripts %}
   {{ super() }}
-  <!--<script src="//vjs.zencdn.net/5.11/video.min.js"></script>-->
+  <script src="//vjs.zencdn.net/5.11/video.min.js"></script>
 {% endblock %}
 
 {% block content %}
