Configured for nginx and uwsgi. Videos also work. Updated web with buttons and more granular seek bar.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,8 +38,20 @@
               </video>
             </div>
           </div>
+          <div class="row top3">
+              <div class="col-md-2">
+                  <button type="button" class='btn btn-info positive-btn' disabled="disabled">
+                      Positive
+                  </button>
+              </div>
+              <div class="col-md-2">
+                  <button type="button" class='btn btn-danger negative-btn' disabled="disabled">
+                      Negative
+                  </button>
+              </div>
+          </div>
           <div class="row">
-              <canvas class="video-nav-bar top7"></canvas>
+              <canvas class="video-nav-bar top3"></canvas>
           </div>
       </div>
     </div>
