--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -20,6 +20,7 @@
   opacity: 0.5;
 }
 
+.top3 { margin-top:3vh; }
 .top5 { margin-top:5vh; }
 .top7 { margin-top:7vh; }
 .top10 { margin-top:10vh; }
