--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,9 +49,18 @@
                       Negative
                   </button>
               </div>
+              <div class="col-md-8">
+                  <button type="button" class='btn btn-default submit-btn' disabled="disabled">
+                      Submit
+                  </button>
+              </div>
           </div>
           <div class="row">
               <canvas class="video-nav-bar top3"></canvas>
+          </div>
+          <div class="row query-sidebar">
+              <ul class="query-list">
+              </ul>
           </div>
       </div>
     </div>
